[package]
name = "acc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
walkdir = "2.5.0"
